# auto-night-mode

./: Cargo.toml
src/: main.rs
