[package]
name = "night-mode"
version = "0.1.0"
authors = ["greg <gregory.mkv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
chrono = { version = "0.4.11", default-features = false }
spa = "0.2.0"
maplit = "1.0.2"
minreq = { version = "2.1.0", features = ["https", "json-using-serde"] }
log = "0.4.8"
flexi_logger = { version = "0.15.2", default-features = false, features = ["colors"] }
